k8s/manifests/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  labels:
    app: backend
spec:
  type: ClusterIP

  selector:
    app: backend
  ports:
    - name: http
      port: 3000
      protocol: TCP
      targetPort: http
